hphp/hack/test/typecheck/readonly/call.php.exp
File "call.php", line 23, characters 3-4:
This expression is readonly, so it can only call readonly methods (Typing[4413])
  File "call.php", line 10, characters 19-21:
  This method is not readonly
File "call.php", line 23, characters 3-9:
This function is readonly, so it must be marked readonly at declaration time to be called. (Typing[4428])
  File "call.php", line 10, characters 19-21:
  Did you mean to declaring this as a `readonly` function?
File "call.php", line 29, characters 3-4:
This function is readonly, so it must be marked readonly at declaration time to be called. (Typing[4428])
  File "call.php", line 27, characters 74-91:
  Did you mean to annotate this typehint as a (readonly function(): void)?
File "call.php", line 31, characters 4-12:
This function is readonly, so it must be marked readonly at declaration time to be called. (Typing[4428])
  File "call.php", line 5, characters 10-27:
  Did you mean to annotate this typehint as a (readonly function(): void)?
